--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,15 @@
   --primary-color: #385170;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   --heading-3: #4d4d4d;
-  --background-color: #ececec;
+  --background-color-1: #ececec;
+  --secondary-color: #d56046;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
 
 body {
   font-family: "DM Serif Display", serif;
   text-align: center;
-  padding: 20px;
-  margin-top: 200px;
-  background: var(--background-color);
 }
 h1,
 h2,
@@ -36,6 +36,34 @@ p {
   line-height: 1.5;
 }
 
+.skill-ul {
+  -webkit-column-count: 2; /* Chrome/Opera, Safari */
+  -moz-column-count: 2; /* Mozilla Firefox */
+  column-count: 2;
+
+  /* Properties below are optional: */
+  -webkit-column-gap: 25px; /* Chrome/Opera, Safari */
+  -moz-column-gap: 25px; /* Mozilla Firefox */
+  column-gap: 25px;
+
+  -webkit-column-rule: 1px single red; /* Chrome/Opera, Safari */
+  -moz-column-rule: 1px single red; /* Mozilla Firefox */
+  column-rule: 1px single red;
+
+  list-style: none;
+  text-align: start;
+  padding-left: 100px;
+}
+
+.skill-ul li::before {
+  content: "\25B7"; /* Unicode bullet symbol */
+  color: var(--primary-color); /* Bullet color */
+
+  /* Optional tweaks */
+  font-weight: bold;
+  padding-right: 10px;
+}
+
 .navigation-links {
   display: flex;
   margin-top: 40px;
@@ -46,7 +74,7 @@ p {
   margin: 120px 20px;
 }
 
-.primary-link {
+.contact-btn {
   border-radius: 10px;
   padding: 20px 15px;
   text-decoration: none;
@@ -54,15 +82,27 @@ p {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
+  transition: all 200ms ease-in-out;
 }
 
-.secondary-link {
+.contact-btn:hover {
+  background: var(--secondary-color);
+  color: white;
+}
+
+.projects-btn {
   border-radius: 10px;
   padding: 20px 15px;
   text-decoration: none;
   text-transform: capitalize;
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
+  transition: all 200ms ease-in-out;
+}
+
+.projects-btn:hover {
+  border-color: var(--secondary-color);
+  color: var(--secondary-color);
 }
 
 .homepage-link {
@@ -71,12 +111,81 @@ p {
   display: block;
 }
 
+.hero {
+  padding-top: 200px;
+  background: var(--background-color-1);
+  height: 100vh;
+}
+
+.about {
+  padding: 50px;
+  background: var(--background-color-1);
+  height: 100vh;
+}
+.about-header {
+  padding: 3%;
+  text-align: start;
+  margin-left: 50px;
+}
+
+h2 mark {
+  background-color: none;
+  background: linear-gradient(
+    0deg,
+    var(--secondary-color) 50%,
+    rgba(255, 255, 255, 0) 50%
+  );
+  background-size: 200% 100%;
+  background-position: 100% 0;
+  transition: all 200ms ease-in-out;
+}
+
+h2 mark:hover {
+  background-color: none;
+  background: linear-gradient(
+    180deg,
+    var(--primary-color) 50%,
+    rgba(255, 255, 255, 0) 50%
+  );
+  background-size: 200% 100%;
+  background-position: 100% 0;
+}
+
+.about p {
+  padding-left: 100px;
+  text-align: start;
+}
+
+.about ul {
+  -webkit-column-count: 2; /* Chrome/Opera, Safari */
+  -moz-column-count: 2; /* Mozilla Firefox */
+  column-count: 2;
+
+  /* Properties below are optional: */
+  -webkit-column-gap: 25px; /* Chrome/Opera, Safari */
+  -moz-column-gap: 25px; /* Mozilla Firefox */
+  column-gap: 25px;
+
+  list-style: none;
+  text-align: start;
+  padding-left: 100px;
+}
+
+.about li::before {
+  content: "\25B7"; /* Unicode bullet symbol */
+  color: var(--primary-color); /* Bullet color */
+
+  /* Optional tweaks */
+  font-weight: bold;
+  padding-right: 10px;
+}
+
 .about-paragraphs {
   margin: 30px 0;
 }
 
 .about-paragraphs p {
-  margin: 10px;
+  padding-left: 50px;
 }
 
 .email-link {
@@ -91,56 +200,50 @@ p {
   text-decoration: underline;
 }
 #personal-photo {
-  border-radius: 20px;
-  width: 50%;
+  border-radius: 2%;
+  width: 60%;
+  box-shadow: var(--background-color-1) 25px 25px 0px -1px,
+    var(--secondary-color) 25px 25px;
+  border: var(--secondary-color) 1px solid;
+  cursor: pointer;
+  transition: all 200ms ease-in-out;
 }
 
-/* h1 {
-  font-size: 50px;
+#personal-photo:hover {
+  background-color: var(--primary-color);
+  color: #fff;
+  box-shadow: var(--primary-color) 5px 5px 0px -1px,
+    var(--primary-color) 5px 5px;
+  border: var(--primary-color) 1px solid;
+}
+.projects {
+  background: var(--background-color-1);
+  padding: 0 150px;
+}
+.projects-header {
+  text-align: start;
 }
 
-h3 {
+.project-description {
+  text-align: start;
+}
+
+.project-keywords div {
+  display: inline;
+  margin-right: 20px;
   color: var(--heading-3);
+  font-family: "Fira Code", monospace;
 }
 
-h5 {
-  background-color: var(--accent-color);
-}
-
-.links {
-  margin: 80px;
-}
-.contact-link {
-  background-color: var(--accent-color);
-  padding: 20px;
-  margin: 10px;
-  box-shadow: var(--box-shadow);
+.project-link {
+  color: var(--heading-3);
   text-decoration: none;
-  color: white;
-  border-radius: 10px;
-  font-size: 15px;
+  background-color: none;
+  background: linear-gradient(
+    0deg,
+    var(--secondary-color) 50%,
+    rgba(255, 255, 255, 0) 50%
+  );
+  background-size: 200% 100%;
+  background-position: 100% 0;
 }
-
-.about-link {
-  border: 1px solid var(--accent-color);
-  padding: 20px;
-  margin: 10px;
-  text-decoration: none;
-  color: var(--accent-color);
-  border-radius: 10px;
-  font-size: 15px;
-}
-
-.about {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.about p {
-  background-color: var(--accent-color);
-  opacity: 0.4;
-  font-size: 10px;
-  margin: 0 10px;
-  padding: 20px;
-  border-radius: 10px;
-} */
