--- a/css/style.css
+++ b/css/style.css
@@ -120,35 +120,11 @@ p {
 .about {
   padding: 50px;
   background: var(--background-color-1);
-  height: 100vh;
 }
 .about-header {
   padding: 3%;
   text-align: start;
   margin-left: 50px;
-}
-
-.about-header {
-  background-color: none;
-  background: linear-gradient(
-    0deg,
-    var(--secondary-color) 50%,
-    rgba(255, 255, 255, 0) 50%
-  );
-  background-size: 200% 100%;
-  background-position: 100% 0;
-  transition: all 200ms ease-in-out;
-}
-
-.about-header:hover {
-  background-color: none;
-  background: linear-gradient(
-    180deg,
-    var(--primary-color) 50%,
-    rgba(255, 255, 255, 0) 50%
-  );
-  background-size: 200% 100%;
-  background-position: 100% 0;
 }
 
 .about p {
@@ -180,14 +156,6 @@ p {
   padding-right: 10px;
 }
 
-.about-paragraphs {
-  margin: 30px 0;
-}
-
-.about-paragraphs p {
-  padding-left: 50px;
-}
-
 .email-link {
   display: flex;
   justify-content: center;
@@ -201,7 +169,7 @@ p {
 }
 #personal-photo {
   border-radius: 2%;
-  width: 60%;
+  width: 300px;
   box-shadow: var(--background-color-1) 25px 25px 0px -1px,
     var(--secondary-color) 25px 25px;
   border: var(--secondary-color) 1px solid;
@@ -218,14 +186,17 @@ p {
 }
 .projects {
   background: var(--background-color-1);
-  padding: 0 150px;
+  padding: 50px;
 }
 .projects-header {
+  padding: 3%;
   text-align: start;
+  margin-left: 50px;
 }
 
 .project-description {
   text-align: start;
+  padding-left: 100px;
 }
 
 .project-keywords div {
@@ -263,5 +234,15 @@ p {
   h3 {
     font-size: 18px;
     opacity: 0.7;
+  }
+  .about p,
+  .about ul,
+  .about-header {
+    text-align: center;
+    padding: 0;
+  }
+
+  .about-header {
+    margin-left: 0;
   }
 }
